--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -435,6 +435,20 @@ Instead of varying according to whether the participant was observing real or vi
 
 %=========================================================================================================
 
+\subsection{IndoorAtlas Performance}
+
+Considering the granularity of the IndoorAtlas data, figure \ref{1-positiondeltas.png} shows the distance between subsequent IndoorAtlas positions for all participants throughout this stage of the user studies. Comparing this figure against figure \ref{vtwpositiondeltas.png} from the VTW experiments immediately reveals how much better IndoorAtlas performed compared to both GPS receivers used in the VTW experiments. The vast majority of position data were less than 1m from the previously reported position, which means that large `jumps' in virtual position were rare. Furthermore, unlike with VTW where the GPS position data did not settle when the user stood still but instead continued to report different positions, IndoorAtlas was accurate enough and fine grained enough to reliably recognise stationary periods, represented in figure \ref{1-positiondeltas.png} by the median for all participants being situated very close to 0 meters.
+
+\begin{figure}[ht]
+	\begin{center}
+		\includegraphics[width=.6\linewidth]{1/1-positiondeltas.png}
+		\caption{Distance between subsequent IndoorAtlas position data.}
+		\label{1-positiondeltas.png}
+	\end{center}
+\end{figure}
+
+%=========================================================================================================
+
 \subsection{Freeform Exploration and Detailed Comparison}
 
 In terms of the three scenarios described in section \ref{parallel-reality-in-virtual-heritage} for application of parallel reality to virtual heritage, the Mirrorshades platform proved throughout this first stage of investigation that it has both the positional accuracy and the orientational accuracy to fully achieve the freeform exploration scenario even in the confines of an indoor cultural heritage site and even when the participant is in very close proximity to walls/corners as shown in figures \ref{Mirrorshades-close-comparison-3.png} and \ref{Mirrorshades-close-comparison-4.png}.
@@ -446,16 +460,6 @@ Additionally the positional and orientational accuracy were for the most part ev
 
 \TwoFig{Mirrorshades-close-comparison-1.png} {Using Mirrorshades to perform detailed comparison between real and virtual artefacts (1/2)} {Mirrorshades-close-comparison-1.png}
        {Mirrorshades-close-comparison-2.png} {Using Mirrorshades to perform detailed comparison between real and virtual artefacts (2/2)} {Mirrorshades-close-comparison-2.png}
-       
-\textbf{ADD DISCUSSION OF FIGURE \ref{1-positiondeltas.png} HERE.}
-
-\begin{figure}[ht]
-	\begin{center}
-		\includegraphics[width=.6\linewidth]{1/1-positiondeltas.png}
-		\caption{Distance between subsequent IndoorAtlas position data.}
-		\label{1-positiondeltas.png}
-	\end{center}
-\end{figure}
 
 %=========================================================================================================
 
@@ -1092,7 +1096,11 @@ Framerates throughout the stage 2.1 investigation were largely as was to be expe
 	\end{center}
 \end{figure}
 
-\textbf{DISCUSSION ABOUT FIGURES \ref{2-1-positiondeltas1-3.png} AND \ref{2-1-positiondeltas1-4.png} HERE.}
+%=========================================================================================================
+
+\subsection{IndoorAtlas Performance}
+
+Performance of IndoorAtlas throughout both scenario 1-3 (figure \ref{2-1-positiondeltas1-3.png}) and scenario 1-4 (figure \ref{2-1-positiondeltas1-4.png}) was once again high, with the vast majority of movements being at a small scale that resulted in large jarring virtual movements being uncommon and medians so close to 0 metres indicating that once again the ability of IndoorAtlas to reliably identify stationary participants was impressive.
 
 \TwoFig{2.1/2-1-positiondeltas1-3.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-3.}{2-1-positiondeltas1-3.png}
        {2.1/2-1-positiondeltas1-4.png}{Distance between subsequent IndoorAtlas position data for scenario with transitions 1-4.}{2-1-positiondeltas1-4.png}
@@ -1430,7 +1438,11 @@ Once again the seated VR scenario provided the highest framerates (for the 2x pa
 	\end{center}
 \end{figure}
 
-\textbf{DISCUSSION ABOUT FIGURES \ref{2-2-positiondeltas7525.png} AND \ref{2-2-positiondeltas5050.png} HERE.}
+%=========================================================================================================
+
+\subsection{IndoorAtlas Performance}
+
+Performance of IndoorAtlas was once again high throughout both the 75/25 scenario (figure \ref{2-2-positiondeltas7525.png}) and the 50/50 scenario (figure \ref{2-2-positiondeltas5050.png}).
 
 \TwoFig{2.2/2-2-positiondeltas7525.png}{Distance between subsequent IndoorAtlas position data for scenario with 75/25 mix.}{2-2-positiondeltas7525.png}
        {2.2/2-2-positiondeltas5050.png}{Distance between subsequent IndoorAtlas position data for scenario with 50/50 mix.}{2-2-positiondeltas5050.png}
