Added citations from Oxford Handbook of Virtuality ch.6.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -72,7 +72,7 @@ Although many applications of augmented reality to cultural heritage sites are m
 
 VR has been used in virtual heritage not only where the real site is no longer accessible, too remote or does not bear any similarity to its original status, but also to allow for more effective control over the atmospheric qualities of the environment being recreated; effects such as fog, sky, water and particles can be effected, exploiting the latest graphical hardware by making use of shaders to deliver high quality graphics~\cite{deamicis:gamebased}. The use in virtual heritage of a HMD or CAVE that completely blocks stimuli from the user's real world surroundings~\cite{cabral:x3dexperience,Christou2006}, which can be situated at the site itself and create of a `space of illusion'~\cite{Tzortzaki2002}, allows for this complete level of control. Unless an augmented reality system employs various environmental monitoring techniques, the augmentations that it overlays upon the user's view of the real world will often have differing illumination than their real surroundings which has a detrimental effect upon their perceived realism~\cite{mcnamara:lightness}.
 
-Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to amateur observers in museums and visitor centres, performance is often considered more important than historical accuracy.
+Whereas many heritage representations, architectural walkthroughs and simulations of artefacts and places have defined a practice where photorealism is considered an important measure of the representation's success, there is an argument that whilst such an emphasis on realism and historical accuracy and authenticity is important, such photorealistic methods can limit the flexibility of reconstructions with regards to how much they can be modified and altered to explore different reconstruction hypotheses~\cite{roussou:photorealism}. Emphasis upon photorealistic graphical quality also has considerations when it comes to real time performance and many intelligent techniques may need to be employed to maintain acceptable performance as complexity of reconstructions increases~\cite{willmott:largecomplex}. Particularly for dissemination to amateur observers in museums and visitor centres, performance is often considered more important than historical accuracy, a trait that mirrors a common theme in the computer gaming industry where \textit{``compelling action can reduce the need for full-scale visualization''}~\cite{Heim2014}.
 
 %=========================================================================================================
 
